syntax = "proto3";
import "country.proto";

message OcrDocument {
    bytes image = 1;
    string language = 2;
    Country country = 3;
    repeated OcrRoi rois = 4;
}

enum RoiKind {
    UNKNOWN = 0;
    TEXT = 1;
    MRZ = 2;
    BARCODE = 3;
}

message OcrRoi {
    string name = 1;
    int32 x = 2;
    int32 y = 3;
    int32 w = 4;
    int32 h = 5;
    RoiKind kind = 6;
}

message  OcrResponse {
    map<string, string> roi_values = 1;
}
